Upgrade to ASTRO

--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -1,7 +1,7 @@
 ---
 import t from '@util/language.json';
 import { Lang } from '@util/language.astro';
-import type { NavPage } from '@util/NavigationTypes';
+import type { NavPage } from '@util/NavigationTypes.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 
 // Properties
