--- a/src/utilities/NavPage.astro
+++ b/src/utilities/NavPage.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownInstance } from 'astro';
-import type { NavPage } from './NavigationTypes';
+import type { NavPage } from './NavigationTypes.astro';
 import { addSlashToAddress } from './Url.astro';
 
 export const mapNavPageWithUrl = (currentUrl: URL) => {
