--- a/src/utilities/Navigation.astro
+++ b/src/utilities/Navigation.astro
@@ -1,6 +1,6 @@
 ---
 import { menu } from '../navigation';
-import { NavPage, isNavPage } from '@util/NavigationTypes';
+import { NavPage, isNavPage } from '@util/NavigationTypes.astro';
 import { mapNavPageWithUrl } from "@util/NavPage.astro";
 import { showInMenu } from "@util/PageTypeFilters";
 import { getTopLevelPages, getPages } from "@util/PageQueries.astro";
