Upgrade to ASTRO

--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -2,7 +2,7 @@
 import t from '@util/language.json';
 import { Lang } from '@util/language.astro';
 import { SITE, Frontmatter } from '../config';
-import { sortByPubDateDesc } from '@util/PageTypeFilters';
+import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
 import { formatDate } from '@util/DateFormat.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 import Default from '@layouts/Default.astro';
