--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -5,7 +5,7 @@ import { Lang } from '@util/language.astro';
 import { Frontmatter, SITE } from '../../config';
 import { formatDate } from '@util/DateFormat.astro';
 import { getPageLinks } from '@util/PageLinks.astro';
-import { sortByPubDateDesc } from '@util/PageTypeFilters';
+import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 import Default from '@layouts/Default.astro';
 
