--- a/src/utilities/Authors.astro
+++ b/src/utilities/Authors.astro
@@ -2,7 +2,7 @@
 import type { Frontmatter } from "../config";
 import type { MarkdownInstance } from "astro";
 import { getPages } from "@util/PageQueries.astro";
-import { isAuthor } from "@util/PageTypeFilters";
+import { isAuthor } from "@util/PageTypeFilters.astro";
 
 type BannerImage = { src: string; alt: string } | null;
 type AuthorList = {
