--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
 import { getBreadcrumbs } from '@util/Breadcrumbs.astro';
 import { addSlashToAddress } from '@util/Url.astro';
