--- a/src/components/Content/Footer.astro
+++ b/src/components/Content/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
-import { SITE } from '../../config';
+import { SITE } from 'src/config';
 
 // Properties
 type Props = {
