--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
 import { getMenu } from '@util/Navigation.astro';
 import NavigationItem from '@content/NavigationItem.astro';
