--- a/src/components/Head/HtmlHead.astro
+++ b/src/components/Head/HtmlHead.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE, OPEN_GRAPH } from '../../config';
+import { SITE, OPEN_GRAPH } from 'src/config';
 import { addSlashToUrl } from '@util/Url.astro';
 
 // Properties
