--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE, Frontmatter } from '../config';
+import { SITE, Frontmatter } from 'src/config';
 import Head from '@head/HtmlHead.astro';
 import SkipLinks from '@content/SkipLinks.astro';
 import Breadcrumbs from '@content/Breadcrumbs.astro';
