--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -1,8 +1,8 @@
 ---
 import type { Page, MarkdownInstance } from 'astro';
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
-import { Frontmatter, SITE } from '../../config';
+import { Frontmatter, SITE } from 'src/config';
 import { formatDate } from '@util/DateFormat.astro';
 import { getPageLinks } from '@util/PageLinks.astro';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
