--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
-import { SITE } from '../../config';
+import { SITE } from 'src/config';
 import { addSlashToAddress } from '@util/Url.astro';
 
 // Properties
