--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
 import type { NavPage } from '@util/NavigationTypes.astro';
 import { addSlashToAddress } from '@util/Url.astro';
