--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
 
 // Properties
