--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@util/language.json';
+import t from '@lang/language.json';
 import { Lang } from '@util/language.astro';
-import { SITE, Frontmatter } from '../config';
+import { SITE, Frontmatter } from 'src/config';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
 import { formatDate } from '@util/DateFormat.astro';
 import { addSlashToAddress } from '@util/Url.astro';
