--- a/src/utilities/Authors.astro
+++ b/src/utilities/Authors.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from "../config";
+import type { Frontmatter } from 'src/config';
 import type { MarkdownInstance } from "astro";
 import { getPages } from "@util/PageQueries.astro";
 import { isAuthor } from "@util/PageTypeFilters.astro";
