--- a/src/utilities/Authors.astro
+++ b/src/utilities/Authors.astro
@@ -1,6 +1,7 @@
 ---
 import type { Frontmatter } from 'src/config';
-import type { MarkdownInstance } from "astro";
+import type { MarkdownInstance } from 'astro';
+
 import { getPages } from "@util/PageQueries.astro";
 import { isAuthor } from "@util/PageTypeFilters.astro";
 
