--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -25,6 +25,7 @@ const textDirection = frontmatter.dir ?? SITE.default.dir;
         <ContentGroup lang={ lang } frontmatter={ frontmatter }>
             <slot />
         </ContentGroup>
+        <!-- <Breadcrumbs lang={ lang } /> -->
         <Footer lang={ lang } />
         <script src="/js/main.js" type="module" async></script>
     </body>
