Layout path standardised

--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -15,7 +15,7 @@ import Default from '@layouts/Default.astro';
 const lang = SITE.default.lang;
 
 const frontmatter: Frontmatter = {
-  layout: '../layouts/Default.astro',
+  layout: 'src/layouts/Default.astro',
   title: 'Articles',
   pubDate: new Date(2022, 9, 17),
   keywords: 'articles,astro,boilerplate',
