Features. Fix naming of Languages.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -94,6 +94,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     margin: 1.5em 0 0.6em 0;
     color: var(--fore-headings);
+    line-height: 1em;
 }
 
 h1 {
@@ -541,7 +542,7 @@ code {
 }
 
 pre.astro-code {
-    border-left: 5px solid var(--fore);
+    border-left: 5px solid var(--fore-link-alt);
     border-radius: var(--block-radius);
     font-family: var(--code-font);
     margin: 1em 0;
