--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,6 +1,6 @@
 ---
 import t from '@lang/language.json';
-import { Lang } from '@util/language.astro';
+import { Lang } from '@util/Language.astro';
 
 import { SITE, Frontmatter } from 'src/config';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
