--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -1,6 +1,6 @@
 ---
 import t from '@lang/language.json';
-import { Lang } from '@util/language.astro';
+import { Lang } from '@util/Language.astro';
 import { getBreadcrumbs } from '@util/Breadcrumbs.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 
