--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -4,6 +4,8 @@ import { Lang } from '@util/Language.astro';
 
 import { SITE } from 'src/config';
 import { addSlashToAddress } from '@util/Url.astro';
+import { isSearch } from '@util/PageTypeFilters.astro';
+import { getPages } from '@util/PageQueries.astro';
 
 // Properties
 type Props = {
@@ -15,7 +17,8 @@ const { lang } = Astro.props as Props;
 const _ = Lang(lang);
 
 // Logic
-// -
+const search = (await getPages(isSearch))[0] ?? null;
+
 ---
 <header class="site-header">
   <a href="#site-nav" class="navigation-icon" title={ _(t.header.open_menu) }><svg xmlns="http://www.w3.org/2000/svg" 
@@ -27,11 +30,13 @@ const _ = Lang(lang);
     <line x1="4" y1="18" x2="20" y2="18" />
   </svg></a>
   <a href="/" class="site-title">{ SITE.title }</a>
-  <a href={ addSlashToAddress('/search/') } class="search-icon" title={ _(t.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
+  {search != null &&
+  <a href={ addSlashToAddress(search.url) } class="search-icon" title={ _(t.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
     width="40" height="40" viewBox="0 0 24 24" stroke-width="1" 
     fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <circle cx="10" cy="10" r="7" />
     <line x1="21" y1="21" x2="15" y2="15" />
   </svg></a>
+  }
 </header>
