--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -6,6 +6,7 @@ import { SITE, Frontmatter } from 'src/config';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
 import { formatDate } from '@util/DateFormat.astro';
 import { addSlashToAddress } from '@util/Url.astro';
+import { getPages } from '@util/PageQueries.astro';
 
 import Default from '@layouts/Default.astro';
 
@@ -20,17 +21,15 @@ const lang = frontmatter.lang ?? SITE.default.lang;
 const _ = Lang(lang);
 
 // Logic
-const allPages = await Astro.glob('/**/*.md');
-const authorPages = allPages
-    .filter(p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
-    .sort(sortByPubDateDesc)
-    .slice(0, SITE.pageSize);
+const authorPages = await getPages(p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
 ---
 <Default frontmatter={frontmatter}>
     <slot />
     <h2>{ _(t.author.recent_articles) }</h2>
     <ul class="post-list">
-    {authorPages.map((post) => (
+    {authorPages
+        .sort(sortByPubDateDesc)
+        .slice(0, SITE.pageSize).map((post) => (
     <li class="list-item" data-destination={ addSlashToAddress(post.url) }>
         <article>
         <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
