--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -1,6 +1,6 @@
 ---
 import t from '@lang/language.json';
-import { Lang } from '@util/Language.astro';
+import { Lang } from '../../utilities/Language.astro';
 
 import type { Page, MarkdownInstance } from 'astro';
 
