Gaming the system!

--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,6 +1,6 @@
 ---
 import t from '@lang/language.json';
-import { Lang } from '@util/Language.astro';
+import { Lang } from '@util/Languages.astro';
 
 // Properties
 type Props = {
