--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,6 +1,6 @@
 ---
 import t from '@lang/language.json';
-import { Lang } from '@util/Language.astro';
+import { Lang } from '@util/Languages.astro';
 
 import { getMenu } from '@util/Navigation.astro';
 
