--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -32,7 +32,7 @@ const authorList = await getAuthorList(frontmatter);
           {authorList.writers.length > 0 && 
           <div class="post-meta">
             {authorList.image?.src && 
-            <img src={ authorList.image.src } alt={ authorList.image.alt } class="author-image" />
+            <img src={ authorList.image.src } alt={ authorList.image.alt } width="50" height="50" class="author-image" />
             }
             <div class="author-info">
               <span>{ _(t.post.written_by) }
