--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -21,7 +21,7 @@ const frontmatter: Frontmatter = {
   keywords: 'articles,astro,boilerplate',
   description: 'Astro boilerplate articles.',
   bannerImage: {
-      src: '/img/surface-accessories-700.webp',
+      src: '/img/surface-accessories.png',
       alt: 'Dummy image',
   }
 };
