--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -1,4 +1,6 @@
 ---
+import type { Frontmatter } from 'src/config';
+
 import t from '@lang/language.json';
 import { Lang } from '@util/Languages.astro';
 import { getBreadcrumbs } from '@util/Breadcrumbs.astro';
@@ -7,6 +9,8 @@ import { addSlashToAddress } from '@util/Url.astro';
 // Properties
 type Props = {
   lang: string;
+  frontmatter: Frontmatter
+  headings: { depth: number; slug: string; text: string; }[];
 };
 const { lang } = Astro.props as Props;
 
