--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -1,4 +1,6 @@
 ---
+import type { Frontmatter } from 'src/config';
+
 import t from '@lang/language.json';
 import { Lang } from '@util/Languages.astro';
 
@@ -10,6 +12,8 @@ import { getPages } from '@util/PageQueries.astro';
 // Properties
 type Props = {
   lang: string;
+  frontmatter: Frontmatter
+  headings: { depth: number; slug: string; text: string; }[];
 };
 const { lang } = Astro.props as Props;
 
