--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,11 +1,15 @@
 ---
+import type { Frontmatter } from 'src/config';
+
 import t from '@lang/language.json';
 import { Lang } from '@util/Languages.astro';
 
 // Properties
 type Props = {
   lang: string;
-}
+  frontmatter: Frontmatter
+  headings: { depth: number; slug: string; text: string; }[];
+};
 const { lang } = Astro.props as Props;
 
 // Language
