Starting to think of theming

--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,14 +1,6 @@
 ---
-import t from '@lang/language.json';
-import { Lang } from '@util/Languages.astro';
-
-import { SITE, Frontmatter } from 'src/config';
-import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
-import { formatDate } from '@util/DateFormat.astro';
-import { addSlashToAddress } from '@util/Url.astro';
-import { getPages } from '@util/PageQueries.astro';
-
-import Default from '@layouts/Default.astro';
+import type { Frontmatter } from 'src/config';
+import Author from '@layouts/Author.astro';
 
 // Properties
 type Props = {
@@ -16,32 +8,8 @@ type Props = {
     headings: { depth: number; slug: string; text: string; }[];
 }
 const { frontmatter, headings } = Astro.props as Props;
-const lang = frontmatter.lang ?? SITE.default.lang;
 
-// Language
-const _ = Lang(lang);
-
-// Logic
-const authorPages = await getPages(p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
 ---
-<Default frontmatter={ frontmatter } headings={ headings }>
+<Author frontmatter={ frontmatter } headings={ headings }>
     <slot />
-    <h2>{ _(t.author.recent_articles) }</h2>
-    <ul class="post-list">
-    {authorPages
-        .sort(sortByPubDateDesc)
-        .slice(0, SITE.pageSize).map((post) => (
-    <li class="list-item" data-destination={ addSlashToAddress(post.url) }>
-        <article>
-        <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
-        <div class="list-item-content">
-        <span class="post-meta">{ formatDate(post.frontmatter, lang, SITE) }</span>
-        <h2>
-            <a href={ addSlashToAddress(post.url) }>{ post.frontmatter.title }</a>
-        </h2>
-        </div>
-        </article>
-    </li>
-    ))}
-    </ul>
-</Default>
+</Author>
