--- a/src/themes/boilerplate/components/Content/Header.astro
+++ b/src/themes/boilerplate/components/Content/Header.astro
@@ -1,7 +1,7 @@
 ---
 import type { Frontmatter } from 'src/config';
 
-import t from '@lang/language.json';
+import t from '@components/language/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import { SITE } from 'src/config';
