--- a/src/themes/boilerplate/components/Content/NavigationItem.astro
+++ b/src/themes/boilerplate/components/Content/NavigationItem.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@lang/language.json';
+import t from '@components/language/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import type { NavPage } from '@util/NavigationTypes.astro';
