--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -1,5 +1,5 @@
 ---
-import t from '@lang/language.json';
+import t from '@components/language/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import type { Page, MarkdownInstance } from 'astro';
@@ -10,7 +10,7 @@ import { getPageLinks } from '@util/PageLinks.astro';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 
-import Default from '@layouts/Default.astro';
+import Default from 'src/layouts/Default.astro';
 
 const lang = SITE.default.lang;
 
