--- a/src/themes/boilerplate/components/Content/Navigation.astro
+++ b/src/themes/boilerplate/components/Content/Navigation.astro
@@ -1,12 +1,12 @@
 ---
 import type { Frontmatter } from 'src/config';
 
-import t from '@lang/language.json';
+import t from '@components/language/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import { getMenu } from '@util/Navigation.astro';
 
-import NavigationItem from '@content/NavigationItem.astro';
+import NavigationItem from '@components/content/NavigationItem.astro';
 
 // Properties
 type Props = {
