--- a/src/themes/boilerplate/components/Content/ContentGroup.astro
+++ b/src/themes/boilerplate/components/Content/ContentGroup.astro
@@ -1,5 +1,5 @@
 ---
-import t from '@components/language/language.json';
+import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import { SITE, Frontmatter } from 'src/config';
