--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -4,7 +4,7 @@ import { Lang } from '@util/Languages.astro';
 
 import type { Page, MarkdownInstance } from 'astro';
 
-import { Frontmatter, SITE } from 'src/config';
+import { Frontmatter, SITE } from '@config';
 import { formatDate } from '@util/DateFormat.astro';
 import { getPageLinks } from '@util/PageLinks.astro';
 import { sortByPubDateDesc } from '@util/PageTypeFilters.astro';
