--- a/src/themes/boilerplate/components/Navigation.astro
+++ b/src/themes/boilerplate/components/Navigation.astro
@@ -1,12 +1,12 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
 
 import { getMenu } from '@util/Navigation.astro';
 
-import NavigationItem from '@components/content/NavigationItem.astro';
+import NavigationItem from '@components/NavigationItem.astro';
 
 // Properties
 type Props = {
