--- a/src/themes/boilerplate/layouts/Default.astro
+++ b/src/themes/boilerplate/layouts/Default.astro
@@ -1,12 +1,12 @@
 ---
-import { SITE, Frontmatter } from 'src/config';
+import { SITE, Frontmatter } from '@config';
 
-import Head from '../components/head/HtmlHead.astro';
-import Header from '../components/content/Header.astro';
-import Footer from '../components/content/Footer.astro';
-import SkipLinks from '../components/content/SkipLinks.astro';
-import Breadcrumbs from '../components/content/Breadcrumbs.astro';
-import ContentGroup from '../components/content/ContentGroup.astro';
+import Head from '@components/HtmlHead.astro';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
+import SkipLinks from '@components/SkipLinks.astro';
+import Breadcrumbs from '@components/Breadcrumbs.astro';
+import ContentGroup from '@components/ContentGroup.astro';
 
 type Props = {
     frontmatter: Frontmatter
