--- a/src/themes/boilerplate/layouts/Search.astro
+++ b/src/themes/boilerplate/layouts/Search.astro
@@ -1,8 +1,8 @@
 ---
+import { SITE, Frontmatter } from '@config';
+
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
-
-import { SITE, Frontmatter } from 'src/config';
 
 import Default from './Default.astro';
 
