--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 import Author from '@layouts/Author.astro';
 
 // Properties
