--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 import Default from '@layouts/Default.astro';
 
 // Properties
