--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 import Search from '@layouts/Search.astro';
 
 // Properties
