--- a/src/themes/boilerplate/components/Breadcrumbs.astro
+++ b/src/themes/boilerplate/components/Breadcrumbs.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
