--- a/src/themes/boilerplate/components/Header.astro
+++ b/src/themes/boilerplate/components/Header.astro
@@ -1,10 +1,10 @@
 ---
-import type { Frontmatter } from 'src/config';
+import type { Frontmatter } from '@config';
 
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
 
-import { SITE } from 'src/config';
+import { SITE } from '@config';
 import { addSlashToAddress } from '@util/Url.astro';
 import { isSearch } from '@util/PageTypeFilters.astro';
 import { getPages } from '@util/PageQueries.astro';
