--- a/src/themes/boilerplate/components/HtmlHead.astro
+++ b/src/themes/boilerplate/components/HtmlHead.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE, OPEN_GRAPH, Frontmatter } from 'src/config';
+import { SITE, OPEN_GRAPH, Frontmatter } from '@config';
 import { addSlashToUrl } from '@util/Url.astro';
 
 // Properties
