Accelerator, not boilerplate, part I

--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -18,8 +18,8 @@ const frontmatter: Frontmatter = {
   layout: 'src/layouts/Default.astro',
   title: 'Articles',
   pubDate: new Date(2022, 9, 17),
-  keywords: 'articles,astro,boilerplate',
-  description: 'Astro boilerplate articles.',
+  keywords: 'articles,astro,accelerator',
+  description: 'Astro Accelerator articles.',
   bannerImage: {
       src: '/img/surface-accessories.png',
       alt: 'Dummy image',
