Improve category pages

--- a/src/pages/articles/category/[category]/[page].astro
+++ b/src/pages/articles/category/[category]/[page].astro
@@ -45,14 +45,23 @@ export async function getStaticPaths({ paginate }: any) {
     .sort(sortByPubDateDesc);
 
   const categories: string[] = [];
-  urlPosts.forEach(p => p.frontmatter.categories.forEach(c => {
-    if (!categories.includes(c)) {
-      categories.push(c);
+  urlPosts.forEach(p => {
+    const cats: string[] = p.frontmatter.categories ?? [];
+    if (cats.length == 0) {
+      console.log('No categories found', p.url);
     }
-  }));
+    cats.forEach(c => {
+      if (!categories.includes(c)) {
+        categories.push(c);
+      }
+    });
+  });
 
   return categories.map(c => {
-    const filtered = urlPosts.filter(p => p.frontmatter.categories.includes(c));
+    const filtered = urlPosts.filter(p => {
+      const cats: string[] = p.frontmatter.categories ?? [];
+      return cats.includes(c);
+    });
     return paginate(filtered, { params: { category: c.toLowerCase() }, pageSize: SITE.pageSize })
   });
 }
