--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -43,6 +43,7 @@
     --paragraph-margin: 1.2rem;
 
     --box-shadow: 0 12px 24px -12px rgb(0 0 0 / 80%);
+    --box-shadow-slight: 0 6px 12px -6px rgb(0 0 0 / 40%);
 
     --navigation-width: 300px;
     --grid-gap: 1rem;
